# Weather-forecast

./: CMakeLists.txt  README.md  config.json  main.cpp
lib/: Weather_forecast.h  controller.cpp  model.cpp  view.cpp
